Build for GitHub Pages

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,5 @@
     "forceConsistentCasingInFileNames": true,
     "noEmit": true
   },
-  "include": ["src"]
+ "include": ["main.tsx", "vite-env.d.ts"]
 }
